# claude-code-history

./: .gitignore  .mcp.json  LICENSE  README.md  pyproject.toml
.claude-plugin/: plugin.json
commands/: history-recent.md  history-reindex.md  history-reset.md  history-retitle.md  history.md
docs/superpowers/plans/: 2026-05-27-cc-history.md
docs/superpowers/specs/: 2026-05-27-cc-history-plugin-design.md
src/cc_history/: config.py  db.py  indexer.py  jsonl_parser.py  models.py  search.py  server.py  slug.py  titler.py
tests/: conftest.py  test_db.py  test_indexer.py  test_jsonl_parser.py  test_search.py  test_server.py  test_slug.py  test_titler.py
tests/fixtures/: malformed.jsonl  sample_session_a.jsonl  sample_session_b.jsonl
