[project]
name = "cc-history-mcp"
version = "0.1.0"
description = "Search Claude Code session history from inside Claude Code via MCP"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Gaurav Dhir" }]
dependencies = [
    "mcp>=1.2.0",
    "anthropic>=0.40.0",
]

[project.scripts]
cc-history-mcp = "cc_history.server:main"

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cc_history"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
